# redicat

./: .gitignore  Cargo.toml  README.md  project_info.md
docs/: CONTRIBUTING.md  README.md  api.md  examples.md
py/py/: bam2mtx.py  call.py  readme.md
src/: main.rs
src/commands/: bam2mtx.rs  base_depth.rs  call.rs  common.rs  mod.rs  preprocess.rs
src/commands/bam2mtx/: args.rs  engine.rs  input.rs  mod.rs  workflow.rs
src/commands/bulk/: args.rs  mod.rs  processor.rs
src/commands/call/: args.rs  mod.rs  pipeline.rs
src/lib/: mod.rs  par_granges.rs  read_filter.rs  utils.rs
src/lib/bam2mtx/: anndata_output.rs  barcode.rs  processor.rs  region_processor.rs  utils.rs
src/lib/call/: anndata_ops.rs  base_matrix.rs  editing.rs  editing_analysis.rs  error.rs  mod.rs  reference_genome.rs  sparse_ops.rs  validation.rs
src/lib/core/: concurrency.rs  error.rs  errors.rs  fs.rs  io.rs  mod.rs  read_filter.rs  sparse.rs
src/lib/engine/: mod.rs
src/lib/engine/par_granges/: intervals.rs  mod.rs  scheduler.rs  types.rs
src/lib/engine/position/: mod.rs  pileup_position.rs  range_positions.rs
src/lib/pipeline/: mod.rs
src/lib/pipeline/bam2mtx/: anndata_output.rs  barcode.rs  deadlock_test.rs  mod.rs  processor.rs  region_processor.rs  utils.rs
src/lib/pipeline/call/: anndata_ops.rs  base_matrix.rs  editing.rs  editing_analysis.rs  mod.rs  reference_genome.rs  validation.rs
src/lib/position/: mod.rs  pileup_position.rs  range_positions.rs
src/lib/utils/: mod.rs
