[package]
name = "redicat"
version = "0.3.2"
authors = ["Li Jiaxuan <lijiaxaun2023@mail.sustech.edu.cn>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/aStudyingTurtle/redicat"
description = "REDICAT - RNA Editing Cellular Assessment Toolkit: A highly parallelized utility for analyzing RNA editing events in single-cell RNA-seq data"
documentation = "https://github.com/aStudyingTurtle/redicat/blob/main/README.md"
readme = "README.md"
categories = ["science"]
keywords = [
    "bioinformatics",
    "single-cell",
    "rna-editing",
    "rna-seq",
]

[profile.release]
opt-level = 3
# lto = "thin"
lto = "fat"
codegen-units = 1
debug = false     # Remove debug info
panic = "unwind"   # Smaller binary, slightly faster

[lib]
name = "redicat_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "redicat"
path = "src/main.rs"

[dependencies]
anndata = "0.6.1"
anndata-hdf5 = "0.5.0"
anyhow = "1.0.98"
polars = { version = "0.45.1", features = [
    "lazy",
    "temporal",
    "strings",
    "csv",
    "dtype-array",
    "parquet",
] }
bio = "0.41"
crossbeam = "0.8"
crossbeam-channel = "0.5"
csv = "1.3.1"
env_logger = "0.9.3"
flate2 = "1.0.30"
grep-cli = "0.1.11"
gzp = "0.10"
itertools = "0.10.5"
lazy_static = "1.5.0"
log = "0.4.27"
lru_time_cache = "0.11.11"
ndarray = "0.15.6"
num_cpus = "1.17.0"
rayon = "1.10.0"
rust-htslib = { version = "0.50.0" }
rust-lapper = "1.2"
parking_lot = "0.12.1"
serde = { version = "1.0.219", features = ["derive"] }
smartstring = { version = "0.2.10", features = ["serde"] }
structopt = "0.3.26"
sprs = "0.11.2"
termcolor = "1.4.1"
nalgebra-sparse = "0.10.0"
nalgebra = "0.33.2"
clap = { version = "4.5.45", features = ["derive"] }
ahash = "0.8.12"
memmap2 = "0.9.7"
thiserror = "2.0.14"
polars-arrow = "0.45.1"
rustc-hash = "2.1.1"
smallvec = "1.15.1"
once_cell = "1.19.0"
tempfile = "3.20.0"
chrono = { version = "0.4.39", default-features = true, features = ["clock"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
proptest = "1.7.0"
rstest = "0.11.0"
tempfile = "3.20.0"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+crt-static"]
